--- a/nautobot_device_onboarding/command_mappers/cisco_xe.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_xe.yml
@@ -43,6 +43,7 @@ sync_network_data:
       - command: "show version"
         parser: "textfsm"
         jpath: "[*].serial[]"
+        post_processor: "{{ obj | unique | first }}"
   interfaces:
     root_key: true
     commands:
@@ -108,12 +109,12 @@ sync_network_data:
     commands:
       - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, mode: mode, access_vlan: access_vlan, trunking_vlans: trunking_vlans}"
-        post_processor: "{{ obj | get_vlan_data(vlan_map) | tojson }}"
+        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, mode: mode, access_vlan: access_vlan, trunking_vlans: trunking_vlans, native_vlan: native_vlan}"
+        post_processor: "{{ obj | get_vlan_data(vlan_map, 'tagged') | tojson }}"
   interfaces__untagged_vlan:
     commands:
       - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[?contains(interface, '{{ current_key | abbreviated_interface_name  }}')].native_vlan"
-        post_processor: "{% if obj | length > 0 %}{{ {'id': obj[0], 'name': vlan_map[obj[0]]} | tojson }}{% else %}{{ obj }}{% endif %}"
+        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, mode: mode, access_vlan: access_vlan, trunking_vlans: trunking_vlans, native_vlan: native_vlan}"
+        post_processor: "{{ obj | get_vlan_data(vlan_map, 'untagged') | tojson }}"
         iterable_type: "dict"
