--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Default owner(s) of all files in this repository
-* @mzbroch @scetron @glennmatthews @chadell
+* @mzbroch @scetron @glennmatthews @chadell @housepbass
