implement fix for iterable type 'int' and solve json loads changing string to int

--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -26,6 +26,7 @@ sync_devices:
         parser: "none"
         jpath: "interfaces.*.interfaceAddress[?ipAddr.address==`{{ obj }}`].ipAddr.maskLen"
         post_processor: "{{ obj[0] }}"
+        iterable_type: "int"
 sync_network_data:
   pre_processor:
     vlan_map:
@@ -64,6 +65,7 @@ sync_network_data:
         parser: "none"
         jpath: 'interfaces."{{ current_key }}".[mtu]'  # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj[0] }}"
+        iterable_type: "str"
   interfaces__mac_address:
     commands:
       - command: "show interfaces | json"
