first past add cables support

--- a/nautobot_device_onboarding/tests/mock/command_mappers/mock_cisco_ios.yml
+++ b/nautobot_device_onboarding/tests/mock/command_mappers/mock_cisco_ios.yml
@@ -116,3 +116,10 @@ sync_network_data:
         jpath: "[?contains(interface, '{{ current_key | abbreviated_interface_name  }}')].native_vlan"
         post_processor: "{% if obj | length > 0 %}{{ vlan_map | selectattr('id', 'eq', obj[0]) | list | tojson }}{% else %}{{ obj }}{% endif %}"
         iterable_type: "dict"
+  neighbors:
+    commands:
+      - command: "show cdp neighbors detail"
+        parser: "textfsm"
+        jpath: "[*].interface"
+        post_processor: "{% set result=[] %}{% for neighbor in obj %}{{ result.append({'local_interface': local_interface, 'remote_device': 'neighbor_name', 'remote_interface': neighbor_interface}) or '' }}{% endfor %}{{ result | tojson }}"
+        iterable_type: "list"
