--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -116,3 +116,10 @@ sync_network_data:
         jpath: "[?INTERFACE=='{{ current_key }}'].{admin_mode: MODE, mode: MODE, access_vlan: ACCESS_VLAN, trunking_vlans: TRUNKING_VLANS, native_vlan: NATIVE_VLAN}"
         post_processor: "{{ obj | get_vlan_data(vlan_map, 'untagged') | tojson }}"
         iterable_type: "dict"
+  neighbors:
+    commands:
+      - command: "show cdp neighbors detail"
+        parser: "textfsm"
+        jpath: ""
+        post_processor: ""
+        iterable_type: "list"
