--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -116,10 +116,21 @@ sync_network_data:
         jpath: "[?INTERFACE=='{{ current_key }}'].{admin_mode: MODE, mode: MODE, access_vlan: ACCESS_VLAN, trunking_vlans: TRUNKING_VLANS, native_vlan: NATIVE_VLAN}"
         post_processor: "{{ obj | get_vlan_data(vlan_map, 'untagged') | tojson }}"
         iterable_type: "dict"
-  neighbors:
+  cables:
+    root_key: true
     commands:
       - command: "show cdp neighbors detail"
         parser: "textfsm"
-        jpath: ""
-        post_processor: ""
-        iterable_type: "list"
+        jpath: "[*].local_interface"
+        post_processor: "{% set result={} %}{% for local_interface in obj %}{{ result.update({local_interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
+  cables__remote_interface:
+    commands:
+      - command: "show cdp neighbors detail"
+        parser: "textfsm"
+        jpath: "[?local_interface=='{{ current_key }}'].neighbor_interface"
+  cables__remote_device:
+    commands:
+      - command: "show cdp neighbors detail"
+        parser: "textfsm"
+        jpath: "[?local_interface=='{{ current_key }}'].neighbor_name"
+
