--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -45,32 +45,32 @@ sync_network_data:
     commands:
       - command: "show interfaces | json"
         parser: "none"
-        jpath: "interfaces.*.name"  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        jpath: "interfaces.*.name"   # when root_key=true this extracted value is what becomes iterable in keys using __ under `current_key`.
         post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
   interfaces__type:
     commands:
       - command: "show interfaces | json"
         parser: "none"
-        jpath: 'interfaces."{{ current_key }}".hardware'  # yamllint disable-line rule:quoted-strings
+        jpath: 'interfaces."{{ current_key }}".hardware'   # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj | map_interface_type }}"
   interfaces__ip_addresses:
     commands:
       - command: "show interfaces | json"
         parser: "none"
-        jpath: 'interfaces."{{ current_key }}".interfaceAddress[].[{ip_address: primaryIp.address, prefix_length: primaryIp.maskLen }][]' # yamllint disable-line rule:quoted-strings
+        jpath: 'interfaces."{{ current_key }}".interfaceAddress[].[{ip_address: primaryIp.address, prefix_length: primaryIp.maskLen }][]'  # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj | tojson }}"
   interfaces__mtu:
     commands:
       - command: "show interfaces | json"
         parser: "none"
-        jpath: 'interfaces."{{ current_key }}".[mtu]'  # yamllint disable-line rule:quoted-strings
+        jpath: 'interfaces."{{ current_key }}".[mtu]'   # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj[0] }}"
         iterable_type: "str"
   interfaces__mac_address:
     commands:
       - command: "show interfaces | json"
         parser: "none"
-        jpath: 'interfaces."{{ current_key }}".physicalAddress'  # yamllint disable-line rule:quoted-strings
+        jpath: 'interfaces."{{ current_key }}".physicalAddress'   # yamllint disable-line rule:quoted-strings
   interfaces__description:
     commands:
       - command: "show interfaces | json"
