--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,12 @@
-mkdocs==1.5.2
-mkdocs-material==9.1.15
+mkdocs==1.6.0
+mkdocs-material==9.5.31
+markdown-data-tables==1.0.0
 markdown-version-annotations==1.0.1
-mkdocstrings-python==1.5.2
-mkdocstrings==0.22.0
+mkdocs-gen-files==0.5.0
+mkdocs-glightbox==0.4.0
+mkdocs-macros-plugin==1.0.5
+mkdocs-material==9.5.31
+mkdocs-redirects==1.2.1
+mkdocs-section-index==0.3.9
+mkdocstrings==0.25.2
+mkdocstrings-python==1.10.8
