--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,14 +34,13 @@ nautobot-ssot = "^2.6.0"
 nautobot-plugin-nornir = "^2.0.0"
 jdiff = "^0.0.6"
 ntc-templates = "^6.0.0"
-nautobot-secrets-providers = "^2.0.1"
 python-tss-sdk = "*"
 # Netutils pin is needed for https://github.com/networktocode/netutils/pull/553
 netutils = "^1.9.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "*"
+django-debug-toolbar = "<4.4"
 invoke = "*"
 ipython = "*"
 pylint = "*"
@@ -51,16 +50,31 @@ ruff = "0.5.5"
 yamllint = "*"
 toml = "*"
 Markdown = "*"
+towncrier = "~23.11.0"
+
+[tool.poetry.group.docs.dependencies]
+# Rendering docs to HTML
+mkdocs = "1.6.0"
+# Embedding YAML files into Markdown documents as tables
+markdown-data-tables = "1.0.0"
 # Render custom markdown for version added/changed/remove notes
 markdown-version-annotations = "1.0.1"
-# Rendering docs to HTML
-mkdocs = "1.5.2"
-# Material for MkDocs theme
-mkdocs-material = "9.1.15"
+# Automatically generate some files as part of mkdocs build
+mkdocs-gen-files = "0.5.0"
+# Image lightboxing in mkdocs
+mkdocs-glightbox = "0.4.0"
+# Use Jinja2 templating in docs - see optional-settings.md and required-settings.md
+mkdocs-macros-plugin = "1.0.5"
+# Material for mkdocs theme
+mkdocs-material = "9.5.31"
+# Handle docs redirections
+mkdocs-redirects = "1.2.1"
+# Automatically handle index pages for docs sections
+mkdocs-section-index = "0.3.9"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "0.22.0"
-mkdocstrings-python = "1.5.2"
-towncrier = "~23.6.0"
+mkdocstrings = "0.25.2"
+# Python-specific extension to mkdocstrings
+mkdocstrings-python = "1.10.8"
 
 [tool.poetry.extras]
 all = [
