--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,9 +134,9 @@ jobs:
           - python-version: "3.11"
             db-backend: "postgresql"
             nautobot-version: "2.2.3"
-          - python-version: "3.12"
-            db-backend: "mysql"
-            nautobot-version: "stable"
+          # - python-version: "3.12"
+          #   db-backend: "mysql"
+          #   nautobot-version: "stable"
     runs-on: "ubuntu-22.04"
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
