fix incorrect changes

--- a/development/development.env
+++ b/development/development.env
@@ -3,7 +3,7 @@
 ################################################################################
 # Nautobot Configuration Environment Variables
 NAUTOBOT_ALLOWED_HOSTS=*
-NAUTOBOT_BANNER_TOP="Device Onboarding 4.0 Webinar"
+NAUTOBOT_BANNER_TOP="Local"
 NAUTOBOT_CHANGELOG_RETENTION=0
 
 NAUTOBOT_DEBUG=True
