add raw parser and force to fake json payload

--- a/nautobot_device_onboarding/command_mappers/hp_comware.yml
+++ b/nautobot_device_onboarding/command_mappers/hp_comware.yml
@@ -4,7 +4,7 @@ sync_devices:
     commands:
       - command: "display current | include sysname"
         parser: "raw"
-        jpath: "[*].hostname"
+        jpath: "[*].raw"
         post_processor: "{{ obj[0].lstrip().split(' ')[1] }}"
   serial:
     commands:
