fix new raw parser type

--- a/nautobot_device_onboarding/command_mappers/hp_comware.yml
+++ b/nautobot_device_onboarding/command_mappers/hp_comware.yml
@@ -4,8 +4,8 @@ sync_devices:
     commands:
       - command: "display current | include sysname"
         parser: "raw"
-        jpath: "[*].raw"
-        post_processor: "{{ obj[0].lstrip().split(' ')[1] }}"
+        jpath: "raw"
+        post_processor: "{{ obj.lstrip().split(' ')[1] }}"
   serial:
     commands:
       - command: "display device manuinfo"
