fix comware yaml file

--- a/nautobot_device_onboarding/command_mappers/hp_comware.yml
+++ b/nautobot_device_onboarding/command_mappers/hp_comware.yml
@@ -28,3 +28,4 @@ sync_devices:
         parser: "textfsm"
         jpath: "[*].ip_address[?contains(@, `{{ obj }}`)][]"
         post_processor: "{{ obj[0].split('/')[1] }}"
+        iterable_type: "int"
