--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -1,23 +1,31 @@
 ---
 sync_devices:
+  pre_processor:
+    re_map:
+      commands:
+        - command: "show version | display json"
+          parser: "none"
+          # {'SRX-LAB01': 'node0', 'SRX-LAB02': 'node1'} maybe none as well for non-multire chassis
+          jpath: '"multi-routing-engine-results"[]."multi-routing-engine-item"[].{hostname: "software-information"[]."host-name"[].data | [0], node: "re-name"[].data | [0]}  || [{hostname: "software-information"[]."host-name"[].data | [0], node:`none`}]'  # yamllint disable-line rule:quoted-strings
+          post_processor: "{% set result={} %}{% for re in obj %}{{ result.update({re['hostname']: re['node']}) or '' }}{% endfor %}{{ result | tojson }}"
   hostname:
     commands:
-      - command: "show version | display json"
+      - command: "show system information | display json"
         parser: "none"
-        jpath: '"multi-routing-engine-results"[]."multi-routing-engine-item"[]."software-information"[]."host-name"[].data || "software-information"[]."host-name"[].data'  # yamllint disable-line rule:quoted-strings
-        post_processor: "{{ obj | unique | first }}"
+        jpath: '"system-information"[]."host-name"[].data'
+        post_processor: "{% set _=re_map.update({original_host: re_map[obj[0]]}) %}{{ obj | unique | first }}"
   serial:
     commands:
-      - command: "show chassis hardware | display json"
+      - command: "show system information | display json"
         parser: "none"
-        jpath: '"multi-routing-engine-results"[]."multi-routing-engine-item"[]."chassis-inventory"[]."chassis"[]."serial-number"[].data || "chassis-inventory"[]."chassis"[]."serial-number"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"system-information"[]."serial-number"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj | unique | first }}"
   device_type:
     commands:
-      - command: "show chassis hardware | display json"
+      - command: "show system information | display json"
         parser: "none"
-        jpath: '"multi-routing-engine-results"[]."multi-routing-engine-item"[]."chassis-inventory"[]."chassis"[]."description"[].data || "chassis-inventory"[]."chassis"[]."description"[].data'  # yamllint disable-line rule:quoted-strings
-        post_processor: "{{ obj | unique | first }}"
+        jpath: '"system-information"[]."hardware-model"[].data'  # yamllint disable-line rule:quoted-strings
+        post_processor: "{{ obj | unique | first | upper }}"
   mgmt_interface:
     commands:
       - command: "show interfaces terse | display json"
@@ -26,17 +34,22 @@ sync_devices:
         post_processor: "{% for entry in obj %}{% if entry['ip'] %}{% for ipaddr in entry['ip'] %}{% if original_host in ipaddr %}{{ entry['name'] | first }}{% endif %}{% endfor %}{% endif %}{% endfor %}"
   mask_length:
     commands:
-      - command: "show route protocol direct | display json"
+      - command: "show interfaces | display json"
         parser: "none"
-        jpath: '"route-information"[]."route-table"[]."rt"[]."rt-destination"[].data'  # yamllint disable-line rule:quoted-strings
-        post_processor: "{% set mask = [] %}{% for ip_route in obj %}{% if ip_route | is_network %}{% if ip_route | ipaddress_network('version') == 4 %}{% if original_host | is_ip_within(ip_route) %}{% set _=mask.append(ip_route.split('/')[1]) %}{% endif %}{% endif %}{% endif %}{% endfor %}{{ mask | unique | first}}"
+        jpath: '"interface-information"[]."physical-interface"[]."logical-interface"[]."address-family"[]."interface-address"[]."ifa-destination"[].data'
+        post_processor: "{% for entry in obj %}{% if '.'.join(original_host.split('.')[:3]) in entry %}{{ entry.split('/')[1] }}{% endif %}{% endfor %}"
         iterable_type: "int"
+      # - command: "show route protocol direct | display json"
+      #   parser: "none"
+      #   jpath: '"route-information"[]."route-table"[]."rt"[]."rt-destination"[].data'  # yamllint disable-line rule:quoted-strings
+      #   post_processor: "{% set mask = [] %}{% for ip_route in obj %}{% if ip_route | is_network %}{% if ip_route | ipaddress_network('version') == 4 %}{% if original_host | is_ip_within(ip_route) %}{% set _=mask.append(ip_route.split('/')[1]) %}{% endif %}{% endif %}{% endif %}{% endfor %}{{ mask | unique | first}}"
+      #   iterable_type: "int"
 sync_network_data:
   serial:
     commands:
-      - command: "show chassis hardware | display json"
+      - command: "show system information | display json"
         parser: "none"
-        jpath: '"multi-routing-engine-results"[]."multi-routing-engine-item"[]."chassis-inventory"[]."chassis"[]."serial-number"[].data || "chassis-inventory"[]."chassis"[]."serial-number"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"system-information"[]."serial-number"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{{ obj | unique | first }}"
   interfaces:
     root_key: true
