--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
-mkdocs==1.3.1
-mkdocs-material==8.4.2
-mkdocstrings==0.19
-mkdocstrings-python==0.7.1
+mkdocs==1.6.0
+mkdocs-material==9.5.32
 mkdocs-version-annotations==1.0.0
+griffe==1.1.1
+mkdocstrings-python==1.10.8
+mkdocstrings==0.25.2
