--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,14 +39,15 @@ Markdown = "*"
 setuptools = "*"
 toml = "*"
 # Rendering docs to HTML
-mkdocs = "1.3.1"
+mkdocs = "1.6.0"
 # Material for MkDocs theme
-mkdocs-material = "8.4.2"
+mkdocs-material = "9.5.32"
 # Render custom markdown for version added/changed/remove notes
 mkdocs-version-annotations = "1.0.0"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "0.19"
-mkdocstrings-python = "0.7.1"
+mkdocstrings = "0.25.2"
+mkdocstrings-python = "1.10.8"
+griffe = "1.1.1"
 
 [tool.black]
 line-length = 120
